fix bottom spacing on forms

--- a/src/pages/ChangePassword/ChangePassword.module.css
+++ b/src/pages/ChangePassword/ChangePassword.module.css
@@ -3,6 +3,7 @@
   align-items: center;
   flex-direction: column;
   color: var(--d-100);
+  margin-bottom: auto;
 }
 
 .form-label{
