--- a/src/pages/Profiles/Profiles.module.css
+++ b/src/pages/Profiles/Profiles.module.css
@@ -12,6 +12,7 @@
   gap: 20px;
   margin: 20px;
   max-width: 1600px;
+  margin-bottom: auto;
 }
 
 .text {
